<resources>
    <string name="app_name">DSM_PC02</string>
    <string name="txtDni">Ingrese su DNI</string>
    <string name="txtNombre">Ingrese su nombre completo</string>
    <string name="txtClave">Ingrese su clave</string>
    <string name="txtVerificaClave">Ingrese nuevamente su clave</string>
    <string name="btnIniciar">Ingresar</string>
    <string name="btnCrear">Crear una cuenta</string>
    <string name="btnRegistrar">Registrar cuenta</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_activity_registro">Crear una cuenta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>